gobmkida/c1/evaluate_diagonal_intersection
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/evaluate_diagonal_intersection/src/engine/optics.c:2175:10: error: use of undeclared identifier 'dword_48AA70'
result = dword_48AA70[v16]; 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/evaluate_diagonal_intersection/src/obj/1/optics.o] Error 1
